# Defi-Sol

./: README.md  deploy-devnet.bat  setup-solana.bat  setup-wallet-devnet.bat
frontend/: package-lock.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/account/: page.tsx
frontend/app/assistant/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/pools/: page.tsx
frontend/app/products/: page.tsx
frontend/app/products/msol/: page.tsx
frontend/app/products/msol-usdc/: page.tsx
frontend/app/products/usdc/: page.tsx
frontend/app/rewards/: page.tsx
frontend/app/stake/: page.tsx
frontend/components/: app-sidebar.tsx  solana-logo.tsx  wallet-connect.tsx
frontend/components/account/: account-details.tsx  account-settings.tsx
frontend/components/assistant/: assistant-actions.tsx  assistant-chat.tsx  chat-message.tsx  suggested-prompts.tsx
frontend/components/dashboard/: dashboard-header.tsx  dashboard-metrics.tsx  products-overview.tsx  recent-activity.tsx  staking-overview.tsx
frontend/components/pools/: lending-metrics.tsx  pool-stats.tsx  pools-overview.tsx
frontend/components/products/: dual-staking-form.tsx  product-header.tsx  product-info.tsx  products-header.tsx  products-list.tsx  products-stats.tsx  risk-pool-selector.tsx  staking-form.tsx
frontend/components/rewards/: rewards-chart.tsx  rewards-history.tsx  rewards-stats.tsx
frontend/components/staking/: pool-comparison.tsx  pool-selector.tsx  staking-form.tsx  staking-info.tsx
solana-staking-app/: .env  Anchor.toml  Dockerfile  Dockerfile.test  comparison_script.py  docker-compose.yml  package-lock.json  package.json  run-full-tests.sh  run_tests.sh  rust_targets.txt  setup-wallet-test.sh
solana-staking-app/backend/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json
solana-staking-app/backend/src/: db-test.ts  index.ts  server.ts
solana-staking-app/backend/src/controllers/: analyticsController.ts  authController.ts  poolController.ts  priceOracleService.ts  stakingController.ts  userController.ts
solana-staking-app/backend/src/middleware/: auth.ts
solana-staking-app/backend/src/models/: pool.ts  transaction.ts  user.ts
solana-staking-app/backend/src/routes/: analytics.ts  auth.ts  pools.ts  priceOracle.ts  staking.ts  user.ts
solana-staking-app/backend/src/services/: analyticsService.ts  notificationService.ts  priceOracleService.ts
solana-staking-app/backend/src/utils/: activityLogger.ts  database.ts  logger.ts  validators.ts
solana-staking-app/backend/tests/: api.test.ts
solana-staking-app/programs/: Cargo.toml
solana-staking-app/programs/dual-product/: Cargo.toml
solana-staking-app/programs/dual-product/src/: errors.rs  lib.rs  state.rs
solana-staking-app/programs/dual-product/src/instructions/: admin.rs  deposits.rs  liquidity.rs  rewards.rs  withdrawals.rs
solana-staking-app/programs/locking-vault/: Cargo.toml
solana-staking-app/programs/locking-vault/src/: errors.rs  lib.rs  state.rs
solana-staking-app/programs/locking-vault/src/instructions/: admin.rs
solana-staking-app/programs/stablecoin-vault/: Cargo.toml
solana-staking-app/programs/stablecoin-vault/src/: errors.rs  lib.rs
solana-staking-app/programs/stablecoin-vault/src/instructions/: admin.rs  deposits.rs  rewards.rs
solana-staking-app/programs/vault-sol/: Cargo.toml
solana-staking-app/programs/vault-sol/src/: lib.rs
solana-staking-app/programs/vault-sol/src/instructions/: admin.rs  mod.rs  rewards.rs  staking.rs
solana-staking-app/smart-contracts/: Cargo.toml  Dockerfile
solana-staking-app/smart-contracts/scripts/: deploy.sh  test.sh
solana-staking-app/smart-contracts/src/: error.rs  instructions.rs  lib.rs  state.rs
solana-staking-app/smart-contracts/src/processor/: borrow.rs  lend.rs  mod.rs  risk.rs  stake.rs
solana-staking-app/smart-contracts/src/processor/pools/: basic_pool.rs  lending_pool.rs  lock_pool.rs  mod.rs
solana-staking-app/smart-contracts/src/utils/: math.rs  mod.rs  oracle.rs  validation.rs
solana-staking-app/tests/: vault-sol.ts
solana-vault-protocol/: .dockerignore  .gitignore  Anchor.toml.backup  package.json  run_tests.sh  setup-test.sh  setup-wallet.bat  tsconfig.json  update-program-ids.sh
solana-vault-protocol/.cargo/: config.toml
solana-vault-protocol/programs/: Cargo.toml
solana-vault-protocol/programs/dual-product/: Cargo.toml
solana-vault-protocol/programs/dual-product/src/: errors.rs  lib.rs
solana-vault-protocol/programs/dual-product/src/instructions/: mod.rs
solana-vault-protocol/programs/locking-vault/src/instructions/: admin.rs  deposits.rs  mod.rs  rewards.rs  withdrawals.rs
solana-vault-protocol/programs/stablecoin-vault/src/: lib.rs  state.rs
solana-vault-protocol/programs/stablecoin-vault/src/instructions/: withdrawals.rs
solana-vault-protocol/programs/vault-sol/: Cargo.toml
solana-vault-protocol/programs/vault-sol/src/: errors.rs  lib.rs  state.rs
solana-vault-protocol/programs/vault-sol/src/instructions/: staking.rs
solana-vault-protocol/tests/: vault-sol.ts
