[workspace]
resolver = "2"
members = [
    "vault-sol",
    "dual-product",
    "stablecoin-vault",
    "locking-vault",
]

[workspace.dependencies]
anchor-lang = "0.32.0"
anchor-spl = "0.32.0"
solana-program = "=2.2.2"
solana-address-lookup-table-interface = "=2.2.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
