[workspace]
resolver = "2"
members = [
    "vault-sol",
    "dual-product",
    "stablecoin-vault",
    "locking-vault",
]

[workspace.dependencies]
anchor-lang = "=0.26.0"
anchor-spl = "=0.26.0"
solana-program = "=1.14.17"
solana-address-lookup-table-interface = "=1.14.17"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
