[package]
name = "vault-sol"
version = "0.1.0"
description = "SOL staking vault with intelligent routing to LST providers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
marinade-cpi = "0.2.0"
jito-staking = "0.1.0"
num-traits = "0.2"
num-derive = "0.3"

