cargo-features = ["workspace-inheritance"]

[package]
name = "vault-sol"
version = "0.1.0"
description = "SOL staking vault with intelligent routing to LST providers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_sol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
# Temporarily commented out to avoid dependency conflicts
# marinade-cpi = "=0.1.0" 
num-traits = "0.2"
num-derive = "0.3"

